updated intro page copy

--- a/app/intro/intro.html
+++ b/app/intro/intro.html
@@ -1,5 +1,5 @@
 <div class="intro-container">
     <h4 class="content-text">Hi, I'm Tyler. I'm a</h4>
-    <h1 class="intro-headline section-header">Product Designer<br/></h1>
+    <h1 class="intro-headline section-header">UX/Product Designer<br/></h1>
     <h4>& occasional Software Developer</h4>
 </div>
