--- a/app/portfolio/works/uxwords.html
+++ b/app/portfolio/works/uxwords.html
@@ -66,7 +66,7 @@
         <div class="col-xs-12">
 
             <div class="input-container input-right-container">
-                <input class="input input-right" type="text" id="word-input" placeholder="Enter a word to add">
+                <input class="input input-right" type="text" id="word-input" placeholder="Enter a word/phrase">
                 <button id="word-button">Add</button>
             </div>
 
