--- a/app/portfolio/works/uxwords.html
+++ b/app/portfolio/works/uxwords.html
@@ -47,6 +47,10 @@
                 float:right;
             }
 
+            .article:hover {
+                background-color:#ccc;
+            }
+
         </style>
 	</head>
 	<body>
