wolflux added on about page

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -31,6 +31,8 @@
                 <li>C#</li>
                 <li>Unity 3D</li>
             </ul>
+            <h3>Wolflux LLC</h3>
+            <p>I publish and distribute apps through Wolflux LLC.</p>
         </div>
 
         <div class="col-sm-6 col-xs-12">
