updated to new description

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -3,9 +3,16 @@
     <br/>
     <div class="content-section row">
         <div class="col-sm-6 col-xs-12">
-            <p>I'm a <strong>Product Designer</strong> based in New York City. I draw, wireframe, research, design and (sometimes) code. I also spend some time on Virtual Reality design. Oh yeah, I also used to be a <strong>Software Developer</strong>.</p>
-            <h3>Design</h3>
+            <p>I'm experienced with all aspects of Product Development and offer contract services in <strong>Product Management, UX Research and Design, UI design, Data Visualization, 3D Design and Software Development</strong>. I draw, wireframe, research, design and (sometimes) code. Oh yeah, I also used to be a <strong>Software Developer</strong>.</p>
+            <h3>Product Management</h3>
             <ul>
+                <li>Product Strategy</li>
+                <li>Agile Development Processes</li>
+            </ul>
+            <h3>UX/Product Design</h3>
+            <ul>
+                <li>User Research</li>
+                <li>UX Strategy</li>
                 <li>Web Application Design</li>
                 <li>Data Visualization</li>
                 <li>Virtual Reality Design</li>
@@ -14,9 +21,6 @@
                 <li>Sketch</li>
                 <li>Wireframing</li>
                 <li>Interactive Prototyping</li>
-                <li>User Research</li>
-                <li>UX Strategy</li>
-                <li>Product Strategy</li>
             </ul>
             <h3>Code</h3>
             <ul>
