update to about

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -3,7 +3,7 @@
     <br/>
     <div class="content-section row">
         <div class="col-sm-6 col-xs-12">
-            <p>I'm experienced with all aspects of Product Development and offer contract services in <strong>Product Management, UX Research and Design, UI design, Data Visualization, 3D Design and Software Development</strong>. I draw, wireframe, research, design and (sometimes) code. Oh yeah, I also used to be a <strong>Software Developer</strong>.</p>
+            <p>I'm experienced with all aspects of Product Development and offer contract services in <strong>Product Management, UX Research and Design, UI design, Data Visualization, 3D Design and Software Development</strong>. I write, draw, wireframe, research, design and (sometimes) code. Oh yeah, I also used to be a Software Developer.</p>
             <h3>Product Management</h3>
             <ul>
                 <li>Product Strategy</li>
@@ -14,25 +14,14 @@
                 <li>User Research</li>
                 <li>UX Strategy</li>
                 <li>Web Application Design</li>
-                <li>Data Visualization</li>
-                <li>Virtual Reality Design</li>
-                <li>Blockchain and crypto-based application design</li>
-                <li>Adobe Creative Suite</li>
-                <li>Sketch</li>
-                <li>Wireframing</li>
                 <li>Interactive Prototyping</li>
             </ul>
             <h3>Code</h3>
             <ul>
-                <li>HTML/CSS</li>
-                <li>d3.js</li>
-                <li>angular.js</li>
-                <li>node.js</li>
-                <li>backbone.js</li>
-                <li>jQuery</li>
-                <li>Bootstrap</li>
-                <li>three.js</li>
-                <li>C#</li>
+                <li>D3.js</li>
+                <li>React, Vue, Angular</li>
+                <li>iOS/Android</li>
+                <li>Three.js</li>
                 <li>Unity 3D</li>
             </ul>
             <h3>Wolflux LLC</h3>
