--- a/app/intro/intro.html
+++ b/app/intro/intro.html
@@ -1,4 +1,4 @@
 <div class="intro-container">
     <h4 class="content-text">Hi, I'm Tyler. I'm A full-stack User-Experience Designer and</h4>
-    <h1 class="intro-headline section-header">I will help you build a better&nbsp;product.<br/></h1>
+    <h1 class="intro-headline section-header">I will help you build a great&nbsp;product.<br/></h1>
 </div>
