udpated about copy

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -3,29 +3,10 @@
     <br/>
     <div class="content-section row">
         <div class="col-sm-6 col-xs-12">
-            <p>I'm experienced with all aspects of Product Development and offer contract services in <strong>Product Management, UX Research and Design, UI design, Data Visualization, 3D Design and Software Development</strong>. I write, draw, wireframe, research, design and (sometimes) code. Oh yeah, I also used to be a Software Developer.</p>
-            <h3>Product Management</h3>
-            <ul>
-                <li>Product Strategy</li>
-                <li>Agile Development Processes</li>
-            </ul>
-            <h3>UX/Product Design</h3>
-            <ul>
-                <li>User Research</li>
-                <li>UX Strategy</li>
-                <li>Web Application Design</li>
-                <li>Interactive Prototyping</li>
-            </ul>
-            <h3>Code</h3>
-            <ul>
-                <li>D3.js</li>
-                <li>React, Vue, Angular</li>
-                <li>iOS/Android</li>
-                <li>Three.js</li>
-                <li>Unity 3D</li>
-            </ul>
+            <p>I am a Full-stack UX Designer. I work with software applications and processes that impact a business' User Experience. While the emphasis is on product design, the work itself can often involve working with business processes, product planning/strategy, visual design and technology. I focus on User Experience and integrating user-centered design practices.</p>
+
             <h3>Wolflux LLC</h3>
-            <p>I publish and distribute apps through Wolflux LLC.</p>
+            <p>I publish and distribute apps through my business, Wolflux LLC.</p>
         </div>
 
         <div class="col-sm-6 col-xs-12">
