removed creative page

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <link rel="stylesheet" href="css/colorpicker.css">
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/intro.css">
-  <link rel="stylesheet" href="css/creative.css">
-  <link rel="stylesheet" href="css/creative_entry.css">
+  <!-- <link rel="stylesheet" href="css/creative.css"> -->
+  <!-- <link rel="stylesheet" href="css/creative_entry.css"> -->
   <link rel="stylesheet" href="css/portfolio.css">
   <script src="js/vendor/modernizr-2.6.2.min.js"></script>
   <script src="js/vendor/jquery-1.10.2.min.js"></script>
@@ -47,7 +47,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-8">
                   <ul class="nav navbar-nav">
                     <li><a class="nav-link" href="#/portfolio">Portfolio</a></li>
-                    <li><a href="#/creative">Creative</a></li>
+                    <!-- <li><a href="#/creative">Creative</a></li> -->
                     <li><a href="#/about">About</a></li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
@@ -70,15 +70,15 @@
       -->
       <script src="js/vendor/angular.min.js"></script>
       <script src="js/vendor/angular-route.min.js"></script>
-      <script src="js/vendor/colorPicker.js"></script>
+      <!-- <script src="js/vendor/colorPicker.js"></script> -->
       <script src="app.js"></script>
-      <script src="app/entries.js"></script>
+      <!-- <script src="app/entries.js"></script> -->
       <!-- <script src="app/resume.js"></script> -->
       <script src="app/intro/intro.js"></script>
       <script src="app/portfolio/portfolio.js"></script>
       <script src="app/about/about.js"></script>
-      <script src="app/creative/creative.js"></script>
-      <script src="app/creative/creative_entry.js"></script>
+      <!-- <script src="app/creative/creative.js"></script> -->
+      <!-- <script src="app/creative/creative_entry.js"></script> -->
 
       <script type="text/javascript">
         var _gaq = _gaq || [];
